--- a/src/ui/tree/tree.css
+++ b/src/ui/tree/tree.css
@@ -109,6 +109,10 @@
     transition: transform .2s ease;
     }
 
+.treenode__toggler-icon--collapsed::before {
+    transform: rotate(0deg);
+    }
+
 .treenode__toggler-icon--expanded::before {
     transform: rotate(90deg);
     }
@@ -282,5 +286,5 @@
 
 @font-face {
     font-family: 'tree-fontello';
-    src: url('./fontello/font/fontello.woff') format('woff')
+    src: url('./fontello/font/fontello.woff') format('woff');
     }
