--- a/src/ui/tree/fontello/css/fontello.css
+++ b/src/ui/tree/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?80522443');
-  src: url('../font/fontello.eot?80522443#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?80522443') format('woff'),
-       url('../font/fontello.ttf?80522443') format('truetype'),
-       url('../font/fontello.svg?80522443#fontello') format('svg');
+  src: url('../font/fontello.eot?41776423');
+  src: url('../font/fontello.eot?41776423#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?41776423') format('woff'),
+       url('../font/fontello.ttf?41776423') format('truetype'),
+       url('../font/fontello.svg?41776423#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?80522443#fontello') format('svg');
+    src: url('../font/fontello.svg?41776423#fontello') format('svg');
   }
 }
 */
@@ -35,7 +35,7 @@
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
  
@@ -46,13 +46,19 @@
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
  
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
 .fontello-table:before { content: '\e800'; } /* '' */
 .fontello-database:before { content: '\e801'; } /* '' */
+.fontello-error:before { content: '\e802'; } /* '' */
 .fontello-link:before { content: '\e803'; } /* '' */
+.fontello-info:before { content: '\e804'; } /* '' */
 .fontello-trigger:before { content: '\e805'; } /* '' */
 .fontello-schema:before { content: '\e806'; } /* '' */
 .fontello-check:before { content: '\e807'; } /* '' */
