--- a/ui/components/pgbb-tree.html
+++ b/ui/components/pgbb-tree.html
@@ -514,7 +514,7 @@
 </script>
 
 <script>
-define('pgbb-tree-viewmodel', ['require', 'module'], function (require, module) {
+define('pgbb-tree-viewmodel', function (require, exports, module) {
   var ko = require('knockout');
 
   module.exports = Tree;
