--- a/ui/_flux/execBar/execBar.css
+++ b/ui/_flux/execBar/execBar.css
@@ -12,8 +12,8 @@
   background-color: #333;
 }
 
-/*button*/.execBar__table,
-/*button*/.execBar__map {
+/*button*/.execBar__execute,
+/*button*/.execBar__executeMap {
   outline: none;
   margin: 0;
   padding: 0;
@@ -33,28 +33,28 @@
   font-size: 0.8125em;
 }
 
-/*.light*/ /*button*/.execBar__table:hover,
-/*.light*/ /*button*/.execBar__map:hover {
+/*.light*/ /*button*/.execBar__execute:hover,
+/*.light*/ /*button*/.execBar__executeMap:hover {
   color: #333;
 }
 
-.dark /*button*/.execBar__table:hover,
-.dark /*button*/.execBar__map:hover {
+.dark /*button*/.execBar__execute:hover,
+.dark /*button*/.execBar__executeMap:hover {
   color: orange;
 }
 
-/*button*/.execBar__table {
+/*button*/.execBar__execute {
   font-weight: bold;
 }
 
-/*button*/.execBar__table::-webkit-focus-inner,
-/*button*/.execBar__map::-webkit-focus-inner {
+/*button*/.execBar__execute::-webkit-focus-inner,
+/*button*/.execBar__executeMap::-webkit-focus-inner {
   border: 0;
   padding: 0;
 }
 
-/*button*/.execBar__table::-moz-focus-inner,
-/*button*/.execBar__map::-moz-focus-inner {
+/*button*/.execBar__execute::-moz-focus-inner,
+/*button*/.execBar__executeMap::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
